ajout du code pour l'ajout des indicateurs et du code pour la création des graphiques avec les indicateurs

--- a/utilities/get_data.ipynb
+++ b/utilities/get_data.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8c158acb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('./')\n",
-    "from utilities.get_data import ExchangeDataManager"
+    "from Object import ExchangeDataManager"
    ]
   },
   {
