ajout d un script pour ajouter les indicateurs et les métriques dans les csv, ajout des script pour faire les différents réseaux de neuronne

--- a/utilities/Visualise_indicators.ipynb
+++ b/utilities/Visualise_indicators.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from function import rsi, macd, stochastique, bollinger_bands, moyenne_mobile # pour les indicateurs\n",
-    "from function import simple_plot, plot_rsi, plot_macd, plot_stochastique, plot_bollinger_bands, plot_moyenne_mobile # pour les graphiques"
+    "from Function import rsi, macd, stochastique, bollinger_bands, moyenne_mobile # pour les indicateurs\n",
+    "from Function import simple_plot, plot_rsi, plot_macd, plot_stochastique, plot_bollinger_bands, plot_moyenne_mobile # pour les graphiques"
    ]
   },
   {
