ajout de la signature de beaucoup de fonction

--- a/utilities/Ajout_ind_bdd.ipynb
+++ b/utilities/Ajout_ind_bdd.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "11bfc677",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recreate_dataset_with_indicators():\n",
+    "def recreate_dataset_with_indicators() -> None:\n",
     "    \"\"\"\n",
-    "    Recreate the dataset with indicators.\n",
+    "    Recrée le dataset avec les indicateurs pour chaque fichier CSV dans le dossier binance.\n",
     "    \"\"\"\n",
     "    dossiers_in_binance = [f for f in os.listdir(path) if os.path.isdir(os.path.join(path, f))]\n",
     "    \n",
