modification de la création des label

--- a/utilities/Ajout_ind_bdd.ipynb
+++ b/utilities/Ajout_ind_bdd.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "11bfc677",
    "metadata": {},
    "outputs": [],
@@ -53,9 +53,10 @@
     "            \n",
     "            # Chargement du fichier CSV\n",
     "            df = pd.read_csv(chemin_fichier)\n",
+    "            chemin_split = chemin_fichier.split('\\\\')\n",
     "            \n",
     "            # Ajout des indicateurs\n",
-    "            df_with_indicators = add_indicators(df)\n",
+    "            df_with_indicators = add_indicators(df, chemin_split[1])\n",
     "            \n",
     "            # Sauvegarde du nouveau fichier CSV\n",
     "            df_with_indicators.to_csv(new_path_fichier, index=False, header=True, encoding='utf-8')"
@@ -66,7 +67,35 @@
    "execution_count": 4,
    "id": "cb3c7839",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12h\n",
+      "12h\n",
+      "12h\n",
+      "1d\n",
+      "1d\n",
+      "1d\n",
+      "1h\n",
+      "1h\n",
+      "1h\n",
+      "1M\n",
+      "1M\n",
+      "1M\n",
+      "1w\n",
+      "1w\n",
+      "1w\n",
+      "2h\n",
+      "2h\n",
+      "2h\n",
+      "4h\n",
+      "4h\n",
+      "4h\n"
+     ]
+    }
+   ],
    "source": [
     "recreate_dataset_with_indicators()\n",
     "# Temps : 8.8s"
