--- a/utilities/Ajout_ind_bdd.ipynb
+++ b/utilities/Ajout_ind_bdd.ipynb
@@ -2,35 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "9c8824f9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-25T09:22:08.451255Z",
+     "start_time": "2025-06-25T09:22:07.557090Z"
+    }
+   },
    "source": [
     "import pandas as pd\n",
     "import os # file handling\n",
     "from Function import add_indicators # pour ajouter les indicateurs au dataframe"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "d96c21a5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-25T09:22:08.460878Z",
+     "start_time": "2025-06-25T09:22:08.455878Z"
+    }
+   },
    "source": [
     "path = '../database/binance' # chemin du fichier CSV\n",
     "new_path = '../database/data_with_indicators' # chemin du fichier CSV avec les indicateurs\n",
     "if not os.path.exists(new_path): # Création du dossier si il n'existe pas\n",
     "    os.makedirs(new_path)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "11bfc677",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-25T09:22:08.644175Z",
+     "start_time": "2025-06-25T09:22:08.637172Z"
+    }
+   },
    "source": [
     "def recreate_dataset_with_indicators() -> None:\n",
     "    \"\"\"\n",
@@ -60,13 +73,23 @@
     "            \n",
     "            # Sauvegarde du nouveau fichier CSV\n",
     "            df_with_indicators.to_csv(new_path_fichier, index=False, header=True, encoding='utf-8')"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "cb3c7839",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-25T09:22:18.475250Z",
+     "start_time": "2025-06-25T09:22:08.654243Z"
+    }
+   },
+   "source": [
+    "recreate_dataset_with_indicators()\n",
+    "# Temps : 8.8s"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -90,16 +113,16 @@
       "2h\n",
       "2h\n",
       "2h\n",
+      "30m\n",
+      "30m\n",
+      "30m\n",
       "4h\n",
       "4h\n",
       "4h\n"
      ]
     }
    ],
-   "source": [
-    "recreate_dataset_with_indicators()\n",
-    "# Temps : 8.8s"
-   ]
+   "execution_count": 4
   }
  ],
  "metadata": {
